# hybrid-sovereign

./: Cargo.toml  GOVERNANCE.md  LLM-START-HERE.md  README.md  SECURITY.md
.github/: CODEOWNERS
RFCs/: 00-INDEX.md  RFC-0001-Constituicao-Hibrido.md  RFC-0002-Decision-as-Proof-Process.md  RFC-0003-Sovereign-Atom-Space.md  RFC-0004-Federation-under-Proof-Carrying-State.md  RFC-0005-Non-Chat-Manager-Plane.md  RFC-0006-Sovereign-Worker-ABI.md
apps/sovereign_manager_app/: Cargo.toml
apps/sovereign_manager_app/src/: app_state.rs  case_service.rs  demo_domain.rs  federation_service.rs  heat_service.rs  main.rs  replay_service.rs  witness_service.rs
docs/v7/: EPICS.md  KANBAN.md
epistemic_storage/: Cargo.toml
epistemic_storage/src/: atom.rs  heat.rs  lib.rs  pointers.rs  space.rs
frugal_decision/: Cargo.toml
frugal_decision/src/: contract.rs  gate.rs  lib.rs  verdict.rs
manager_plane/: Cargo.toml
manager_plane/src/: budget.rs  case.rs  input.rs  lib.rs  output.rs  receipt.rs  worker.rs
proof_federation/: Cargo.toml
proof_federation/src/: acceptance.rs  announcement.rs  fork.rs  lib.rs  node.rs  policy.rs  validator.rs
proof_runtime/: Cargo.toml
proof_runtime/src/: action.rs  contract.rs  host_env.rs  lib.rs  proof.rs  receipt.rs  runtime.rs  session.rs  verifier.rs
sovereign_core/: Cargo.toml
sovereign_core/src/: lib.rs
sovereign_demo/: Cargo.toml
sovereign_demo/src/: main.rs
sovereign_demo/tests/: one_sovereign_case.rs
worker_abi/: Cargo.toml
worker_abi/src/: bounding.rs  env.rs  lib.rs  manifest.rs  yield_model.rs
worker_abi/src/sandbox/: mod.rs  wasm.rs  wgpu.rs
