[package]
name = "manager_plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
epistemic_storage = { path = "../epistemic_storage" }
proof_federation = { path = "../proof_federation" }
proof_runtime = { path = "../proof_runtime" }
sovereign_core = { path = "../sovereign_core" }

[lib]
path = "src/lib.rs"
