[package]
name = "proof_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frugal_decision = { path = "../frugal_decision" }
epistemic_storage = { path = "../epistemic_storage" }
sovereign_core = { path = "../sovereign_core" }
worker_abi = { path = "../worker_abi" }

[lib]
path = "src/lib.rs"
