[package]
name = "sovereign_demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
epistemic_storage = { path = "../epistemic_storage" }
frugal_decision = { path = "../frugal_decision" }
manager_plane = { path = "../manager_plane" }
proof_federation = { path = "../proof_federation" }
proof_runtime = { path = "../proof_runtime" }
worker_abi = { path = "../worker_abi" }
sovereign_core = { path = "../sovereign_core" }
